src/snapshots/funky__tests__loop.wasm.snap
---
source: src/tests.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    module: RefCell {
        value: ModuleInstance {
            start: 0,
            code: [
                FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: I32,
                        },
                    ],
                    code: [
                        Num(
                            OP_I32_CONST(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_SET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_BLOCK(
                                ValueType(
                                    I32,
                                ),
                                [
                                    Ctrl(
                                        OP_LOOP(
                                            ValueType(
                                                I32,
                                            ),
                                            [
                                                Var(
                                                    OP_LOCAL_GET(
                                                        0,
                                                    ),
                                                ),
                                                Num(
                                                    OP_I32_CONST(
                                                        1,
                                                    ),
                                                ),
                                                Num(
                                                    OP_I32_ADD,
                                                ),
                                                Var(
                                                    OP_LOCAL_SET(
                                                        0,
                                                    ),
                                                ),
                                                Var(
                                                    OP_LOCAL_GET(
                                                        0,
                                                    ),
                                                ),
                                                Num(
                                                    OP_I32_CONST(
                                                        5,
                                                    ),
                                                ),
                                                Num(
                                                    OP_I32_EQ,
                                                ),
                                                Ctrl(
                                                    OP_IF(
                                                        Empty,
                                                        [
                                                            Var(
                                                                OP_LOCAL_GET(
                                                                    0,
                                                                ),
                                                            ),
                                                            Ctrl(
                                                                OP_BR(
                                                                    2,
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                ),
                                                Ctrl(
                                                    OP_BR(
                                                        0,
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                ],
                            ),
                        ),
                    ],
                },
            ],
            fn_types: [
                FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
            ],
            funcaddrs: [
                0,
            ],
            tableaddrs: [],
            memaddrs: [],
            globaladdrs: [],
            exports: [
                ExportInstance {
                    name: "loop1",
                    value: Function {
                        ty: 0,
                    },
                },
            ],
        },
    },
    started: false,
    store: Store {
        funcs: [
            FuncInstance {
                ty: FunctionSignature {
                    param_types: [],
                    return_types: [
                        I32,
                    ],
                },
                module: (Weak),
                code: FunctionBody {
                    locals: [
                        LocalEntry {
                            count: 1,
                            ty: I32,
                        },
                    ],
                    code: [
                        Num(
                            OP_I32_CONST(
                                0,
                            ),
                        ),
                        Var(
                            OP_LOCAL_SET(
                                0,
                            ),
                        ),
                        Ctrl(
                            OP_BLOCK(
                                ValueType(
                                    I32,
                                ),
                                [
                                    Ctrl(
                                        OP_LOOP(
                                            ValueType(
                                                I32,
                                            ),
                                            [
                                                Var(
                                                    OP_LOCAL_GET(
                                                        0,
                                                    ),
                                                ),
                                                Num(
                                                    OP_I32_CONST(
                                                        1,
                                                    ),
                                                ),
                                                Num(
                                                    OP_I32_ADD,
                                                ),
                                                Var(
                                                    OP_LOCAL_SET(
                                                        0,
                                                    ),
                                                ),
                                                Var(
                                                    OP_LOCAL_GET(
                                                        0,
                                                    ),
                                                ),
                                                Num(
                                                    OP_I32_CONST(
                                                        5,
                                                    ),
                                                ),
                                                Num(
                                                    OP_I32_EQ,
                                                ),
                                                Ctrl(
                                                    OP_IF(
                                                        Empty,
                                                        [
                                                            Var(
                                                                OP_LOCAL_GET(
                                                                    0,
                                                                ),
                                                            ),
                                                            Ctrl(
                                                                OP_BR(
                                                                    2,
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                ),
                                                Ctrl(
                                                    OP_BR(
                                                        0,
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                ],
                            ),
                        ),
                    ],
                },
            },
        ],
        tables: [],
        memory: [],
        stack: [],
        globals: [],
    },
}
